# NoIAT

./: .gitignore  CMakeLists.txt  README.md
build_mingw/: CMakeCache.txt  Makefile
src/: main.cpp  noiat_stub32.nasm  noiat_stub64.nasm  parser.cpp  parser.hpp  sha1.c  utils.cpp  utils.hpp
